kubernetes/pro/ingress-springboot-demo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-demo-ingress
  namespace: entorno-pro
spec:
  rules:
    - host: "springboot-pro.192.168.49.2.nip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: springboot-demo-service
                port:
                  number: 8080
